environments/dev/Addons-EKS/kube/addon_argocd_app_ingresses/argo-cd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  namespace: argo-cd
  annotations:
    kubernetes.io/ingress.class: nginx-public
spec:
  rules:
    # REPLACE WITH REAL PUBLIC DOMAIN
    - host: argocd-public.example.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
